--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-
+<rssapp-wall id="_pOrpoczbNi3C6TuO"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 <!-- Posts Index
 ==================================================
 <div class="blog-grid-container">
@@ -11,12 +11,12 @@ title: Home
     {% endfor %}
 # </div> -->
 
-<rssapp-wall id="_pOrpoczbNi3C6TuO"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+
 
 <!-- Pagination
-================================================== -->
+==================================================
 <div class="bottompagination">
 <span class="navigation" role="navigation">
     {% include pagination.html %}
 </span>
-</div>
+</div> -->
