--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 <table style="width:100%">
   <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
+    <th><a href="{{ site.baseurl }}/">Home</a></th>
+    <th><a href="{{ site.baseurl }}/ahgz">AHGZ </a></th>
     <th>Age</th>
   </tr>
   <tr>
@@ -17,6 +17,11 @@ title: Home
     <td>Eve</td>
     <td>Jackson</td>
     <td>94</td>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
   </tr>
 </table>
 
