--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@ title: Home
   <tr>
     <th><a href="{{ site.baseurl }}/">Home</a></th>
     <th><a href="{{ site.baseurl }}/ahgz">AHGZ </a></th>
-    <th>Age</th>
+    <th><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></th>
   </tr>
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de </a></td>
+    <td><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 </a></td>
+    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal </a></td>
   </tr>
   <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></td>
+    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
+    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
   </tr>
   <tr>
     <td>Jill</td>
