--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Home
 <table style="width:100%">
   <tr>
     <th><a href="{{ site.baseurl }}/">Home</a></th>
-    <th><a href="{{ site.baseurl }}/ahgz">AHGZ </a></th>
-    <th><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></th>
+    <td><a href="{{ site.baseurl }}/ahgz">AHGZ </a></td>
+    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de </a></td>
