--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></td>
-    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
+    <td><a href="{{ site.baseurl }}/dehoga-bundesverband">dehoga-bundesverband </a></td>
     <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
   </tr>
   <tr>
