--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@ title: Home
 <table style="width:100%">
   <tr>
     <th><a href="{{ site.baseurl }}/">Home</a></th>
-    <td><a href="{{ site.baseurl }}/ahgz">AHGZ </a></td>
-    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
+    <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="600" height="400" /></a></td>
+    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE.de</a></td>
   </tr>
   <tr>
-    <td><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de </a></td>
-    <td><a href="{{ site.baseurl }}/Hotelvor9">Hotel vor9 </a></td>
-    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal </a></td>
+    <td><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de</a></td>
+    <td><a href="{{ site.baseurl }}/Hotelvor9">Hotelvor9.de</a></td>
+    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal.de</a></td>
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></td>
     <td><a href="{{ site.baseurl }}/dehoga-bundesverband">dehoga-bundesverband </a></td>
-    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE </a></td>
+    <td><a href="{{ site.baseurl }}/hotelfachzeitung">Hotelfachzeitung.de </a></td>
   </tr>
   <tr>
     <td>Jill</td>
