--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <table style="width:100%">
   <tr>
     <th><a href="{{ site.baseurl }}/">Home</a></th>
-    <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="600" height="400" /></a></td>
+    <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="100" /></a></td>
     <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE.de</a></td>
   </tr>
   <tr>
