--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
   <tr>
     <th><a href="{{ site.baseurl }}/">Home</a></th>
     <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="100" /></a></td>
-    <td><a href="{{ site.baseurl }}/hogapage">HOGAPAGE.de</a></td>
+    <td><a href="{{ site.baseurl }}/hogapage"><img src="assets/images/logo-hogapage.svg" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/hotelier_de">Hotelier.de</a></td>
