--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Home
     <td><a href="{{ site.baseurl }}/hogapage"><img src="assets/images/logo-hogapage.svg" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
-    <td><a href="{{ site.baseurl }}/hotelier_de"><img src="assets/images/logo-hotelier.png title="Example Image Link" width="100" /></a></td>
-    <td><a href="{{ site.baseurl }}/Hotelvor9">Hotelvor9.de</a></td>
+    <td><a href="{{ site.baseurl }}/hotelier_de"><img src="assets/images/logo-hotelier.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/Hotelvor9"><img src="assets/images/logo-hotelvor9.svg" title="Example Image Link" width="100" /></a></td>
     <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal.de</a></td>
   </tr>
   <tr>
