--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
   <tr>
     <td><a href="{{ site.baseurl }}/hotelier_de"><img src="assets/images/logo-hotelier.png" title="Example Image Link" width="100" /></a></td>
     <td><a href="{{ site.baseurl }}/Hotelvor9"><img src="assets/images/logo-hotelvor9.svg" title="Example Image Link" width="100" /></a></td>
-    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie">Presseportal.de</a></td>
+    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie"><img src="assets/images/logo-presseportal.png" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></td>
