--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<table style="width:100%">
+<table style="width:100%"; text-align:center>
   <tr>
     <th style="background-color: #37414E;"><a href="{{ site.baseurl }}/">Home</a></th>
     <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="100" /></a></td>
