--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <table style="width:100%; text-align:center">
   <tr>
-    <th style="background-color: #37414E; opacity:0.2"><a href="{{ site.baseurl }}/">Home</a></th>
+    <th style="background-color:rgba(55,65,78,0.35)"><a href="{{ site.baseurl }}/">Home</a></th>
     <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="100" /></a></td>
     <td><a href="{{ site.baseurl }}/hogapage"><img src="assets/images/logo-hogapage.svg" title="Example Image Link" width="100" /></a></td>
   </tr>
