<img src="assets/images/logo-presseportal.png" title="Example Image Link" width="100" />

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ title: Home
     <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie"><img src="assets/images/logo-presseportal.png" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
-    <td><a href="{{ site.baseurl }}/hoga-presse">hoga-presse.de </a></td>
-    <td><a href="{{ site.baseurl }}/dehoga-bundesverband">dehoga-bundesverband </a></td>
-    <td><a href="{{ site.baseurl }}/hotelfachzeitung">Hotelfachzeitung.de </a></td>
+    <td><a href="{{ site.baseurl }}/hoga-presse"><img src="assets/images/logo-hoga-presse.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/dehoga-bundesverband"><img src="assets/images/logo-dehoga.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/hotelfachzeitung"><img src="assets/images/logo-HFZ.png" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
     <td>Jill</td>
