--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,4 +1,11 @@
-
+---
+layout: default
+title: stream
+permalink: /stream
+comments: false
+image:
+imageshadow: true
+---
 <!DOCTYPE html><html>
 <head>
 <meta charset="UTF-8">
