--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
     <td><a href="{{ site.baseurl }}/hotelfachzeitung"><img src="assets/images/logo-HFZ.png" title="Example Image Link" width="100" /></a></td>
   </tr>
   <tr>
-    <td></td>
+    <td><a href="{{ site.baseurl }}/Tophotel"><img src="assets/images/logo-tophotel.jpg" title="Example Image Link" width="100" /></a></td>
     <td></td>
     <td></td>
   </tr>
