--- a/index.html
+++ b/index.html
@@ -26,3 +26,7 @@ title: Home
 </table>
 
 <rssapp-wall id="_pOrpoczbNi3C6TuO"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+
+
+xxx
+<rssapp-wall id="e1iLvumgTTqNkeu0"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
