--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@ title: Home
     <td></td>
   </tr>
 </table>
-
+<hr class="line1">
 <rssapp-wall id="_pOrpoczbNi3C6TuO"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
+<hr class="line1">
+<table style="width:100%; text-align:center">
+  <tr>
+    <th style="background-color:rgba(251,187,33,0.35)"><a href="{{ site.baseurl }}/">Home</a></th>
+    <td><a href="{{ site.baseurl }}/ahgz"><img src="assets/images/logo-ahgz.svg" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/hogapage"><img src="assets/images/logo-hogapage.svg" title="Example Image Link" width="100" /></a></td>
+  </tr>
+  <tr>
+    <td><a href="{{ site.baseurl }}/hotelier_de"><img src="assets/images/logo-hotelier.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/Hotelvor9"><img src="assets/images/logo-hotelvor9.svg" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/Presseportal-Hotellerie"><img src="assets/images/logo-presseportal.png" title="Example Image Link" width="100" /></a></td>
+  </tr>
+  <tr>
+    <td><a href="{{ site.baseurl }}/hoga-presse"><img src="assets/images/logo-Hoga-Presse.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/dehoga-bundesverband"><img src="assets/images/logo-dehoga.png" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/hotelfachzeitung"><img src="assets/images/logo-HFZ.png" title="Example Image Link" width="100" /></a></td>
+  </tr>
+  <tr>
+    <td><a href="{{ site.baseurl }}/Tophotel"><img src="assets/images/logo-tophotel.jpg" title="Example Image Link" width="100" /></a></td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
