--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: Home
   </tr>
   <tr>
     <td><a href="{{ site.baseurl }}/Tophotel"><img src="assets/images/logo-tophotel.jpg" title="Example Image Link" width="100" /></a></td>
+    <td><a href="{{ site.baseurl }}/Cost & Logis"><img src="assets/images/logo-CuL.png" title="Example Image Link" width="100" /></a></td>
     <td></td>
     <td></td>
   </tr>
